--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=Project01_Ecommerce
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
